[package]
name = "jupiter-deriverse"
version = "0.1.0"
edition = "2024"

[dependencies]
jupiter-amm-interface = { path = "../jupiter-amm-interface" }
anyhow = "1.0.100"
bytemuck = { version = "1.23.0" }
solana-sdk = "^2.3.0"
rust_decimal = "1.39.0"
drv-models = { git = "ssh://git@github.com/deriverse/drv-smart-contract-common.git", tag = "v0.2.20" }
spl-associated-token-account = { version = "7.0.0", features = [
    "no-entrypoint",
] }

[dev-dependencies]
solana-client = "^2.3.1"
solana-system-interface = "1.0.0"
ahash = "0.8.12"
once_cell = "1.21.3"

[features]
rpc-test = []
